tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax07/Test.java


public class Test {
	interface A {
		default default void m() { 
			
		} 
	}
}